--- a/card/lab.html
+++ b/card/lab.html
@@ -1,5 +1,5 @@
-<meta name="twitter:card" content="summary" />
+<meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@britainelects" />
 <meta name="twitter:title" content="Lab Gain" />
 <meta name="twitter:image" content="https://static.ge2019.opnprd.com/gain/lab-gain.png" />
-<meta name="twitter:url" content="https://britainelects.newstatesman.com/live-results" />
+<meta name="og:url" content="https://britainelects.newstatesman.com/live-results" />
