--- a/card/lab.html
+++ b/card/lab.html
@@ -3,3 +3,4 @@
 <meta name="twitter:title" content="Lab Gain" />
 <meta name="twitter:image" content="https://static.ge2019.opnprd.com/gain/lab-gain.png" />
 <meta name="og:url" content="https://britainelects.newstatesman.com/live-results" />
+<meta http-equiv="refresh" content="0; url=https://britainelects.newstatesman.com/live-results">
