--- a/card/SDLP.html
+++ b/card/SDLP.html
@@ -1,6 +1,6 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@britainelects" />
 <meta name="twitter:title" content="SDLP Gain" />
-<meta name="twitter:image" content="https://static.ge2019.opnprd.com/gain/sdlp-gain.png" />
+<meta name="twitter:image" content="https://ge2019.odileeds.org/gain/sdlp-gain.png" />
 <meta name="og:url" content="https://britainelects.newstatesman.com/live-results" />
 <meta http-equiv="refresh" content="0; url=https://britainelects.newstatesman.com/live-results">
