--- a/index.html
+++ b/index.html
@@ -40,7 +40,25 @@ layout: page
 </ul>
 
 <p class="licence">
-  <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Dataset" property="dct:title" rel="dct:type">UK General Election 2019 Results</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://ge2019.odileeds.org" property="cc:attributionName" rel="cc:attributionURL">Britain Elects, New Statesman, ODI Leeds</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+    <img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
+  </a><br />
+  <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Dataset" property="dct:title" rel="dct:type">
+    UK General Election 2019 Results
+  </span>
+  by
+  <a xmlns:cc="http://creativecommons.org/ns#" href="https://ge2019.odileeds.org/" property="cc:attributionName" rel="cc:attributionURL">
+    Britain Elects, New Statesman, ODI Leeds
+  </a>
+  is licensed under a
+  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+    Creative Commons Attribution-ShareAlike 4.0 International License</a>.<br />
+  Based on works at
+    <a xmlns:dct="http://purl.org/dc/terms/" href="http://www.electoralcommission.org.uk/our-work/our-research/electoral-data" rel="dct:source">http://www.electoralcommission.org.uk/our-work/our-research/electoral-data</a>,
+    <a xmlns:dct="http://purl.org/dc/terms/" href="http://www.data.parliament.uk/dataset/general-election-2015" rel="dct:source">http://www.data.parliament.uk/dataset/general-election-2015</a>,
+    <a xmlns:dct="http://purl.org/dc/terms/" href="https://researchbriefings.parliament.uk/ResearchBriefing/Summary/CBP-7979" rel="dct:source">https://researchbriefings.parliament.uk/ResearchBriefing/Summary/CBP-7979</a>,
+    <a xmlns:dct="http://purl.org/dc/terms/" href="https://www.theyworkforyou.com/mps/?date=2019-11-06" rel="dct:source">https://www.theyworkforyou.com/mps/?date=2019-11-06</a>,
+    <a xmlns:dct="http://purl.org/dc/terms/" href="https://candidates.democracyclub.org.uk/" rel="dct:source">https://candidates.democracyclub.org.uk/</a>.
 </p>
 
 
