--- a/index.html
+++ b/index.html
@@ -61,5 +61,15 @@ layout: page
     <a xmlns:dct="http://purl.org/dc/terms/" href="https://candidates.democracyclub.org.uk/" rel="dct:source">https://candidates.democracyclub.org.uk/</a>.
 </p>
 
+<h2>Updates</h2>
+<ul>
+  <li>
+    <strong>2019-12-19</strong> Updates to votes following data validation
+  </li>
+  <li>
+    <strong>2019-12-14</strong> Initial release
+  </li>
+</ul>
+
 
 
